--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,11 @@
     <script src="assets/js/mansicca.js"></script>
 </head>
 <body>
+
+    <username>
+        <input type="text" pattern="[A-Za-z0-9]+" placeholder="Enter your name to start">
+    </username>
+
     <header>
         <img src="assets/img/mansicca.svg">
         <div>
