--- a/src/index.html
+++ b/src/index.html
@@ -24,12 +24,13 @@
 
     <link href="assets/css/mansicca.css" rel="stylesheet" media="all">
     <link href="assets/css/content-instagram.css" rel="stylesheet" media="all">
+    <script src="assets/js/mansicca-backend.js"></script>
     <script src="assets/js/mansicca.js"></script>
 </head>
 <body>
 
     <username>
-        <input type="text" pattern="[A-Za-z0-9]+" placeholder="Enter your name to start">
+        <input type="text" pattern="[A-Za-z0-9]+" placeholder="Enter your name to start" spellcheck="false">
     </username>
 
     <header>
@@ -68,4 +69,7 @@
     </controls>
 
 </body>
+    <script>
+        mansiccaKey = "YKWsd6QW5sxSNInbwiMmmDhugwS6PpVJ";
+    </script>
 </html>
