instagram style, data

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,14 @@
         </div>
     </header>
 
-    <content>
+    <content class="instagram">
+        <div class="user">
+            <strong>Some User</strong><br>
+            Some Place, Some Country
+        </div> 
+        <img>
+        <div class="caption">
+        </div>
     </content>
 
     <controls>
