--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,8 @@
     
     <link href="assets/css/bootstrap-reboot.css" rel="stylesheet" media="all">
 
-    <link href="assets/css/LotaGrotesque.css" rel="stylesheet" media="all">
+    <!--//<link href="assets/css/LotaGrotesque.css" rel="stylesheet" media="all">//-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,900,900i" rel="stylesheet" media="all">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" media="all">
 
     <link href="assets/css/mansicca.css" rel="stylesheet" media="all">
