--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,11 @@
 
 </body>
     <script>
-        mansiccaKey = "9ju2G5FL30tiDd1ERqU35Du6uu9GKF7S";
+        (function(){
+            mansiccaKey = "9ju2G5FL30tiDd1ERqU35Du6uu9GKF7S";
+            if(window.location.hash.length == 0){
+                history.pushState(null, null, "#" + mansiccaKey);
+            }
+        })();
     </script>
 </html>
