--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
 </body>
     <script>
         (function(){
-            mansiccaKey = "9ju2G5FL30tiDd1ERqU35Du6uu9GKF7S";
+            mansiccaKey = "PallasYllas"
             if(window.location.hash.length == 0){
                 history.pushState(null, null, "#" + mansiccaKey);
             }
