content-imageonly, henkka=owner

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
     <link href="assets/css/mansicca.css" rel="stylesheet" media="all">
     <link href="assets/css/content-instagram.css" rel="stylesheet" media="all">
     <link href="assets/css/content-twitter.css" rel="stylesheet" media="all">
+    <link href="assets/css/content-imageonly.css" rel="stylesheet" media="all">
     <script src="assets/js/mansicca-backend.js"></script>
     <script src="assets/js/mansicca.js"></script>
 </head>
